--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Capital</title>
+    <title>Wedding Invitation of Steven and Stella</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Baskerville+Italic:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- styles libraries -->
@@ -388,8 +388,8 @@ document.addEventListener("DOMContentLoaded", () => {
                                         <div class="couple-description">
                                             <h3 data-anim="fade-down">Steven Budiman</h3>
                                             <div class="couple-parent" data-anim="zoom-out">
-                                                <p>Second son of <br> Irwan Soebekti <br> and <br>
-                                                    Josephine Budiman</p>
+                                                <p>Second son of <br> Irwan Soebekti and Josephine Budiman</p>
+                                                <br>
                                             </div>
                                             <div class="sosmed-wrap">
                                              <a href="https://www.instagram.com/stvnbdmnn" 
@@ -422,8 +422,8 @@ document.addEventListener("DOMContentLoaded", () => {
                                         <div class="couple-description">
                                             <h3 data-anim="fade-down">Stella Mary</h3>
                                             <div class="couple-parent" data-anim="zoom-out">
-                                                <p>First daughter of <br> Anderson Everhardt <br> and <br>
-                                                    Vella Martha</p>
+                                                <p>First daughter of <br> Anderson Everhardt and Vella Martha</p>
+                                                <br>
                                             </div>
                                             <div class="sosmed-wrap">
                                               <a href="https://www.instagram.com/stellaamary" 
@@ -733,13 +733,13 @@ document.addEventListener("DOMContentLoaded", () => {
                                                     <div class="ornaments-wrapper">
                                                         <div class="bg-1">
                                                             <div class="image-element">
-                                                                <img src="./assets/images/Afterparty.png" alt="Afterparty">
+                                                                <img src="./assets/images/Afterparty1.png" alt="Afterparty">
                                                             </div>
                                                             <div class="overlay-elements-gradient overlay-top"></div>
                                                         </div>
                                                     </div>
                                                     <h4><br></h4>
-                                                    <h4 data-anim="fade-down">After Party</h4>
+                                                    <h4 data-anim="fade-down"><strong>After Party</strong></h4>
                                                     <div class="event-name-body" data-anim="zoom-out">
                                                         <p>Saturday</p>
                                                         <div class="date">
@@ -810,7 +810,7 @@ document.addEventListener("DOMContentLoaded", () => {
                     <div class="ornaments-wrapper overflow-hidden">
                         <div class="bg-1">
                             <div class="image-element">
-                                <img src="./assets/images/bg-1.png" alt="bg-1" class="img-fluid">
+                                <img src="./assets/images/bg-1(1).png" alt="bg-1" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -855,26 +855,26 @@ document.addEventListener("DOMContentLoaded", () => {
                                               <option value="Unable All">Unable to attend</option>
                                             </select>
 
-<div id="guestsMatrimonyWrapper" class="mb-3" style="display: none;">
-  <label for="guestsM" class="form-label">The number of guests</label>
-  <select id="guestsM" name="guestsM" class="form-select">
-    <option disabled selected value="">Select guests</option>
-  </select>
-</div>
+                                            <div id="guestsMatrimonyWrapper" class="mb-3" style="display: none;">
+                                                <label for="guestsM" class="form-label">The number of guests</label>
+                                                <select id="guestsM" name="guestsM" class="form-select">
+                                                    <option disabled selected value="">Select guests</option>
+                                                </select>
+                                            </div>
 
-<div id="guestsReceptionWrapper" class="mb-3" style="display: none;">
-  <label for="guests" class="form-label">The number of guests</label>
-  <select id="guests" name="guests" class="form-select">
-    <option disabled selected value="">Select guests</option>
-  </select>
-</div>
+                                            <div id="guestsReceptionWrapper" class="mb-3" style="display: none;">
+                                                <label for="guests" class="form-label">The number of guests</label>
+                                                <select id="guests" name="guests" class="form-select">
+                                                    <option disabled selected value="">Select guests</option>
+                                                </select>
+                                            </div>
 
-<div id="guestsAfterpartyWrapper" class="mb-3" style="display: none;">
-  <label for="guests" class="form-label">The number of guests</label>
-  <select id="guests" name="guests" class="form-select">
-    <option disabled selected value="">Select guests</option>
-  </select>
-</div>
+                                            <div id="guestsAfterpartyWrapper" class="mb-3" style="display: none;">
+                                                <label for="guests" class="form-label">The number of guests</label>
+                                                <select id="guests" name="guests" class="form-select">
+                                                    <option disabled selected value="">Select guests</option>
+                                                </select>
+                                            </div>
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -943,6 +943,10 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 </script>
                                             <br>
+                                            <p style="color: black;">With Respect …</p>
+                                            <p style="color: black; margin-top: 1rem;">In order for all guests to relax and  enjoy the evening, we respectfully request an <em>adults only</em> celebration.</p>
+                                            <p style="color: black; margin-bottom: 0rem; margin-top: 1rem;">And as this will be a seated dinner,</p>
+                                            <p style="color: black;">please RSVP <em>according to the number of guests</em> indicated in your invitation.</p>
                                             <button class="btn btn-custom w-100" data-anim="zoom-in-up">Send</button>
                                         </form>
                                     </div>
@@ -1208,6 +1212,12 @@ document.addEventListener("DOMContentLoaded", () => {
                                             <li class="splide__slide position-relative">
                                                     <img src="./assets/images/photo20.jfif" alt="img-gallery" class="img-gallery" />
                                             </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo21.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
+                                            <li class="splide__slide position-relative">
+                                                    <img src="./assets/images/photo22.jfif" alt="img-gallery" class="img-gallery" />
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1238,8 +1248,8 @@ document.addEventListener("DOMContentLoaded", () => {
                   background: rgba(0,0,0,0.35);
                   "></div>
 
-                 <div style="position: relative; z-index: 1;">
-                   <h2 data-anim='fade-down' style='font-size: 2rem; margin-bottom: 8px;'>Thank You</h2>
+                 <div style="position: relative; z-index: 1; margin-top: 11rem;">
+                   <h2 data-anim='fade-down' style='font-size: 1.5rem; margin-bottom: 8px;'>Thank You</h2>
                     <p data-anim='zoom-out' style='font-size: 1rem;'>See you at the celebration!</p>
                     <p data-anim='zoom-out' style='font-size: 1rem;'>#STEVoundSTELLA</p>
                  </div>
